Update text in v1.0.0 changelog entry

--- a/index.html
+++ b/index.html
@@ -63,22 +63,31 @@ Licensed under the MIT License
     </div>
 
     <div class="section" id="right-section">
-  <h2 style="text-align: center;">Changelog</h2>
+      <h2 style="text-align: center;">Changelog</h2>
 
-  <div class="changelog-entry">
-    <h3 style="text-align: left;">v1.0.0</h3>
-    <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
-    <ul style="list-style-type: disc; margin-left: 20px;">
-      <li>Initial release of the Gem Incremental game.</li>
-      <li>Added Better Pickaxe upgrade that gives you more click power.</li>
-      <li>Added Miner upgrade that generates gems automatically.</li>
-      <li>Game state now saves via cookies.</li>
-      <li>Basic layout with three sections and smooth UI.</li>
-    </ul>
+      <!-- Template for upcoming version -->
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.0.1</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Fixed text in the previous changelog entry.</li>
+        </ul>
+      </div>
+
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.0.0</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Initial release of Gem Incremental.</li>
+          <li>Added Better Pickaxe upgrade that gives you more click power.</li>
+          <li>Added Miner upgrade that generates gems automatically.</li>
+          <li>Game state now saves via cookies.</li>
+          <li>Basic layout with three sections and smooth UI.</li>
+        </ul>
+      </div>
+    </div>
   </div>
-</div>
 
   <script src="main.js"></script>
 </body>
 </html>
-
