Add black bomb upgrade

--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@ Licensed under the MIT License
           <button id="buy-miner" class="mine-button" onclick="buyMiner()">Buy</button>
         </div>
 
-        <div class="coming-soon-box">Coming soon</div>
+         <div class="upgrade-box">
+          <div class="tooltip-container">
+            <div class="upgrade-icon">💣</div>
+            <span class="tooltip-text">Why not use the power of little bombs?</span>
+          </div>
+          <div class="upgrade-info">
+            <strong>Black Bomb</strong><br>
+            Cost: <span id="miner-cost">500</span> 💎<br>
+            <small class="upgrade-power">+100 Help Power</small>
+          </div>
+          <button id="buy-miner" class="mine-button" onclick="buyBlackBomb()">Buy</button>
+        </div>
+        
         <div class="coming-soon-box">Coming soon</div>
         <div class="coming-soon-box">Coming soon</div>
         <div class="coming-soon-box">Coming soon</div>
@@ -66,6 +78,14 @@ Licensed under the MIT License
       <h2 style="text-align: center;">Changelog</h2>
 
       <!-- Template for upcoming version -->
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.1.0</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Added Black Bomb upgrade.</li>
+        </ul>
+      </div>
+      
       <div class="changelog-entry">
         <h3 style="text-align: left;">v1.0.1</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
