--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.0.1
+Gem Incremental v1.1.0
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,12 +7,12 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.0.1</title>
+  <title>Gem Incremental v1.1.0</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-  <h1 id="game-title">Gem Incremental v1.0.1</h1>
+  <h1 id="game-title">Gem Incremental v1.1.0</h1>
 
   <div class="container">
     <div class="section" id="mine-section">
@@ -58,7 +58,7 @@ Licensed under the MIT License
           </div>
           <div class="upgrade-info">
             <strong>Black Bomb</strong><br>
-            Cost: <span id="miner-cost">500</span> 💎<br>
+            Cost: <span id="bomb-cost">500</span> 💎<br>
             <small class="upgrade-power">+100 Help Power</small>
           </div>
           <button id="buy-miner" class="mine-button" onclick="buyBlackBomb()">Buy</button>
