--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.1.1
+Gem Incremental v1.1.2
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,12 +7,12 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.1.1</title>
+  <title>Gem Incremental v1.1.2</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-  <h1 id="game-title">Gem Incremental v1.1.1</h1>
+  <h1 id="game-title">Gem Incremental v1.1.2</h1>
 
   <div class="container">
     <div class="section" id="mine-section">
@@ -78,6 +78,14 @@ Licensed under the MIT License
       <h2 style="text-align: center;">Changelog</h2>
 
       <!-- Template for upcoming version -->
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.1.2</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Made the price jumps less aggresive.</li>
+        </ul>
+      </div>
+      
        <div class="changelog-entry">
         <h3 style="text-align: left;">v1.1.1</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
