--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ Licensed under the MIT License
         <h3 style="text-align: left;">v1.1.2</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
         <ul style="list-style-type: disc; margin-left: 20px;">
-          <li>Made the price jumps less aggresive.</li>
+          <li>Made the upgrade cost jumps less aggresive.</li>
+          <li>Balanced the price of the upgrade Bomb.</li>
         </ul>
       </div>
       
