--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.1.2
+Gem Incremental v1.2.0
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,12 +7,12 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.1.2</title>
+  <title>Gem Incremental v1.2.0</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-  <h1 id="game-title">Gem Incremental v1.1.2</h1>
+  <h1 id="game-title">Gem Incremental v1.2.0</h1>
 
   <div class="container">
     <div class="section" id="mine-section">
@@ -58,10 +58,23 @@ Licensed under the MIT License
           </div>
           <div class="upgrade-info">
             <strong>Bomb</strong><br>
-            Cost: <span id="bomb-cost">500</span> 💎<br>
+            Cost: <span id="bomb-cost">1000</span> 💎<br>
             <small class="upgrade-power">+100 Help Power</small>
           </div>
-          <button id="buy-bomb" class="mine-bomb" onclick="buyBomb()">Buy</button>
+          <button id="buy-bomb" class="dynamite-button" onclick="buyBomb()">Buy</button>
+        </div>
+
+        <div class="upgrade-box">
+          <div class="tooltip-container">
+            <div class="upgrade-icon">💣</div>
+            <span class="tooltip-text">Why not use the power of powerful dynamites?</span>
+          </div>
+          <div class="upgrade-info">
+            <strong>Dynamite</strong><br>
+            Cost: <span id="dynamite-cost">10000</span> 💎<br>
+            <small class="upgrade-power">+1000 Help Power</small>
+          </div>
+          <button id="buy-dynamite" class="dynamite-button" onclick="buyDynamite()">Buy</button>
         </div>
         
         <div class="coming-soon-box">Coming soon</div>
@@ -77,7 +90,15 @@ Licensed under the MIT License
     <div class="section" id="right-section">
       <h2 style="text-align: center;">Changelog</h2>
 
-      <!-- Template for upcoming version -->
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.2.0</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 10th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Added the Dynamite upgrade.</li>
+          <li>Corrected initial price text on the Bomb upgrade.</li>
+        </ul>
+      </div>
+      
       <div class="changelog-entry">
         <h3 style="text-align: left;">v1.1.2</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 9th 2025</p>
