--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Licensed under the MIT License
             Cost: <span id="bomb-cost">1000</span> 💎<br>
             <small class="upgrade-power">+100 Help Power</small>
           </div>
-          <button id="buy-bomb" class="dynamite-button" onclick="buyBomb()">Buy</button>
+          <button id="buy-bomb" class="mine-button" onclick="buyBomb()">Buy</button>
         </div>
 
         <div class="upgrade-box">
@@ -74,7 +74,7 @@ Licensed under the MIT License
             Cost: <span id="dynamite-cost">10000</span> 💎<br>
             <small class="upgrade-power">+1000 Help Power</small>
           </div>
-          <button id="buy-dynamite" class="dynamite-button" onclick="buyDynamite()">Buy</button>
+          <button id="buy-dynamite" class="mine-button" onclick="buyDynamite()">Buy</button>
         </div>
         
         <div class="coming-soon-box">Coming soon</div>
