--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Licensed under the MIT License
 
         <div class="upgrade-box">
           <div class="tooltip-container">
-            <div class="upgrade-icon">💣</div>
+            <div class="upgrade-icon">🧨</div>
             <span class="tooltip-text">Why not use the power of powerful dynamites?</span>
           </div>
           <div class="upgrade-info">
@@ -77,7 +77,6 @@ Licensed under the MIT License
           <button id="buy-dynamite" class="mine-button" onclick="buyDynamite()">Buy</button>
         </div>
         
-        <div class="coming-soon-box">Coming soon</div>
         <div class="coming-soon-box">Coming soon</div>
         <div class="coming-soon-box">Coming soon</div>
         <div class="coming-soon-box">Coming soon</div>
