--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Licensed under the MIT License
         <p style="text-align: left;"><strong>Release Date:</strong> June 10th 2025</p>
         <ul style="list-style-type: disc; margin-left: 20px;">
           <li>Added the Dynamite upgrade.</li>
-          <li>Corrected initial price text on the Bomb upgrade.</li>
+          <li>Updated Bomb upgrade text to display the correct initial price.</li>
         </ul>
       </div>
       
