--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.2.0
+Gem Incremental v1.2.1
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,12 +7,12 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.2.0</title>
+  <title>Gem Incremental v1.2.1</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-  <h1 id="game-title">Gem Incremental v1.2.0</h1>
+  <h1 id="game-title">Gem Incremental v1.2.1</h1>
 
   <div class="container">
     <div class="section" id="mine-section">
@@ -89,6 +89,14 @@ Licensed under the MIT License
     <div class="section" id="right-section">
       <h2 style="text-align: center;">Changelog</h2>
 
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.2.1</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 10th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Fixed a bug that caused the Dynamite upgrade to calculate its price based on the Bomb upgrade.</li>
+        </ul>
+      </div>
+      
       <div class="changelog-entry">
         <h3 style="text-align: left;">v1.2.0</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 10th 2025</p>
