--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.2.1
+Gem Incremental v1.2.2
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,13 +7,13 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.2.1</title>
+  <title>Gem Incremental v1.2.2</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
   <br>
-  <h1 id="game-title">Gem Incremental v1.2.1</h1>
+  <h1 id="game-title">Gem Incremental v1.2.2</h1>
 
   <div class="container">
     <div class="section" id="mine-section">
@@ -90,6 +90,14 @@ Licensed under the MIT License
     <div class="section" id="right-section">
       <h2 style="text-align: center;">Changelog</h2>
 
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.2.2</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 10th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Added spacing above the game title for better visual balance.</li>
+        </ul>
+      </div>
+      
       <div class="changelog-entry">
         <h3 style="text-align: left;">v1.2.1</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 10th 2025</p>
