--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.3.0
+Gem Incremental v1.3.1
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,13 +7,13 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.3.0</title>
+  <title>Gem Incremental v1.3.1</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
   <br>
-  <h1 id="game-title">Gem Incremental v1.3.0</h1>
+  <h1 id="game-title">Gem Incremental v1.3.1</h1>
 
   <div class="container">
     <div class="section" id="mine-section">
@@ -114,6 +114,14 @@ Licensed under the MIT License
     <div class="section" id="right-section">
       <h2 style="text-align: center;">Changelog</h2>
 
+      <div class="changelog-entry">
+        <h3 style="text-align: left;">v1.3.1</h3>
+        <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
+        <ul style="list-style-type: disc; margin-left: 20px;">
+          <li>Fixed a bug that caused the Rocket upgrade to provide the same help power as the previous upgrade.</li>
+        </ul>
+      </div>
+      
       <div class="changelog-entry">
         <h3 style="text-align: left;">v1.3.0</h3>
         <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
