--- a/index.html
+++ b/index.html
@@ -109,29 +109,23 @@ Licensed under the MIT License
           <div class="upgrade-box">
             <div class="tooltip-container">
               <div class="upgrade-icon">💥</div>
-              <span class="tooltip-text">Why not rebirth to multiple your help power the next play? Each rebirth will multiply your help power.</span>
+              <span class="tooltip-text">Why not rebirth to mine even more gems? Each rebirth will multiply your help power.</span>
             </div>
             <div class="upgrade-info">
-              <strong>Rebirth</strong><br>
+              <strong>Rocket</strong><br>
               Cost: <span id="rebirth-cost">10000000</span> 💎<br>
               <small class="upgrade-power">+1 Rebirth</small>
             </div>
-            <button id="buy-rebirth" class="mine-button" onclick="buyRebirth()">Rebirth</button>
+            <button id="buy-rebirth" class="mine-button" onclick="buyRebirth()">Buy</button>
           </div>
+
+          <div class="coming-soon-box">Coming soon</div>
         </div>
       </div>
 
       <div class="section" id="right-section">
         <h2 style="text-align: center;">Changelog</h2>
 
-        <div class="changelog-entry">
-          <h3 style="text-align: left;">v1.5.0</h3>
-          <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
-          <ul style="list-style-type: disc; margin-left: 20px;">
-            <li>Added rebirths.</li>
-          </ul>
-        </div>
-        
         <div class="changelog-entry">
           <h3 style="text-align: left;">v1.4.1</h3>
           <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
