--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Licensed under the MIT License
         <div class="gem-icon">💎</div>
         <div id="click-power-display">Click Power: 1</div>
         <div id="help-power-display">Help Power: 0</div>
+        <div id="rebirth-power-display">Rebirth Power: 0</div>
         <button class="mine-button" onclick="mineGem()">Mine Gems</button>
       </div>
 
