--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@ Licensed under the MIT License
         <h2 style="text-align: center;">Changelog</h2>
 
         <div class="changelog-entry">
+          <h3 style="text-align: left;">v1.5.0</h3>
+          <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
+          <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Added rebirth.</li>
+          </ul>
+        </div>
+        
+        <div class="changelog-entry">
           <h3 style="text-align: left;">v1.4.1</h3>
           <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
           <ul style="list-style-type: disc; margin-left: 20px;">
