Add scientific notation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Licensed under the MIT License
             </div>
             <div class="upgrade-info">
               <strong>Bomb</strong><br>
-              Cost: <span id="bomb-cost">1000</span> 💎<br>
+              Cost: <span id="bomb-cost">1e3</span> 💎<br>
               <small class="upgrade-power">+100 Help Power</small>
             </div>
             <button id="buy-bomb" class="mine-button" onclick="buyBomb()">Buy</button>
@@ -74,8 +74,8 @@ Licensed under the MIT License
             </div>
             <div class="upgrade-info">
               <strong>Dynamite</strong><br>
-              Cost: <span id="dynamite-cost">10000</span> 💎<br>
-              <small class="upgrade-power">+1000 Help Power</small>
+              Cost: <span id="dynamite-cost">1e4</span> 💎<br>
+              <small class="upgrade-power">+1e3 Help Power</small>
             </div>
             <button id="buy-dynamite" class="mine-button" onclick="buyDynamite()">Buy</button>
           </div>
@@ -87,8 +87,8 @@ Licensed under the MIT License
             </div>
             <div class="upgrade-info">
               <strong>Robot</strong><br>
-              Cost: <span id="robot-cost">100000</span> 💎<br>
-              <small class="upgrade-power">+10000 Help Power</small>
+              Cost: <span id="robot-cost">1e5</span> 💎<br>
+              <small class="upgrade-power">+1e4 Help Power</small>
             </div>
             <button id="buy-robot" class="mine-button" onclick="buyRobot()">Buy</button>
           </div>
@@ -100,8 +100,8 @@ Licensed under the MIT License
             </div>
             <div class="upgrade-info">
               <strong>Rocket</strong><br>
-              Cost: <span id="rocket-cost">1000000</span> 💎<br>
-              <small class="upgrade-power">+100000 Help Power</small>
+              Cost: <span id="rocket-cost">1e6</span> 💎<br>
+              <small class="upgrade-power">+1e5 Help Power</small>
             </div>
             <button id="buy-rocket" class="mine-button" onclick="buyRocket()">Buy</button>
           </div>
