--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- 
-Gem Incremental v1.4.1
+Gem Incremental v1.4.2
 Author: Mathias Tichota
 Licensed under the MIT License
 -->
@@ -7,7 +7,7 @@ Licensed under the MIT License
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gem Incremental v1.4.1</title>
+  <title>Gem Incremental v1.4.2</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -15,7 +15,7 @@ Licensed under the MIT License
   <div id="game-root">
 
     <br>
-    <h1 id="game-title">Gem Incremental v1.4.1</h1>
+    <h1 id="game-title">Gem Incremental v1.4.2</h1>
 
     <div class="container">
       <div class="section" id="mine-section">
@@ -111,6 +111,15 @@ Licensed under the MIT License
       <div class="section" id="right-section">
         <h2 style="text-align: center;">Changelog</h2>
 
+        <div class="changelog-entry">
+          <h3 style="text-align: left;">v1.4.2</h3>
+          <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
+          <ul style="list-style-type: disc; margin-left: 20px;">
+            <li>Implemented the scientific notation for numbers above 1000.</li>
+            <li>Fixed UI bug.</li>
+          </ul>
+        </div>
+        
         <div class="changelog-entry">
           <h3 style="text-align: left;">v1.4.1</h3>
           <p style="text-align: left;"><strong>Release Date:</strong> June 11th 2025</p>
